Changelog for GEMC
==================

6/17/19

 - number of events made long int

6/14/19

- added target position from CCDB (fixed variation, todo: detector-dependent variation mechanism) to MM and CTOF routines.

5/23/19

 - added "PhotoNuclear" entry in the physics option list as a check that this part is not included with the normal phys list constructors.

5/17/19

 - option RECORD_MIRRORS renamed RECORD_OPTICALPHOTONS

5/8/19

 - added JSON ouput for all generator options

5/7/19

 - first implementation of JSON output for the options
 - output implemention of JSON options for txt and evio

5/6/19

 - reorg of gemc_option categories
 - only write option map out if output is specified
 - adding json format output for option map (in process)

5/1/19

 - fixed dc setting of NWIRES.
 - added flight time to tdc in dc


4/25/19

 - Richard Holmes: added FILTER_HADRONS options: when set to 1, do not write events if there are no hadrons.
   Otherwise if nonzero write only events having a hadron with matching ID. For example -FILTER_HADRONS=2212 for protons.
   Also, do not print progress if evtN hasn't changed.

4/18/19

 - added mirror hit process routine as standalone routine and bank

3/26/19

 - added FILTER_HITS options: when set to 1, do not write events if there are not hits.

3/25/19

- making sure initWithRunNumber is not loading calibration constants before activating event for all hit processes

2/25/19

 - Updated LUND documentation on Info tab

1/31/19

 - Richard Holmes: The RERUN_SELECTED option allows one to rerun multiple events whose RNG state was saved in a previous pass.

    For example, suppose there is a rare background signature of an electron between 100 MeV and 1 GeV in detector ID 1000
    and you want to visualize a few dozen such events to investigate where the background is coming from. You can do a batch
    run using

     -SAVE_SELECTED=“1000,11,100*MeV,1*GeV,trackE,./savedirectory”
